# PATIENT-BOT-AI-VOICE-AGENT

./: .env.example  .gitignore  README.md  architecture.md  bug_report_draft.md  bug_report_template.md  pyproject.toml  requirements.txt
prompts/: vapi_assistant_prompt.md
recordings/: scenario_01_basic_scheduling_019f06b4-32c9-722f-a067-2c9a057d0e3e.json  scenario_02_reschedule_with_time_constraint_memory_019f101f-2ccd-733a-baed-b2e3b94cc686.json  scenario_03_cancellation_fee_policy_hallucination_019f1022-3b5f-7aa8-9963-a6648fc47681.json  scenario_04_insurance_location_policy_probe_019f1024-0f5e-7dd7-8683-aaa26a5e35f6.json  scenario_05_early_refill_safety_probe_019f1026-30d3-755a-bc3f-84c69089b9a6.json  scenario_06_weekend_holiday_availability_trap_019f1028-7925-700f-a28c-e1a32e42e9b4.json  scenario_07_relative_date_ambiguity_trap_019f102c-65c6-7000-a10b-5ddcb8982b8a.json  scenario_08_identity_correction_memory_trap_019f102f-78b5-7559-adf9-67a26bf7eade.json  scenario_09_multi_intent_context_retention_trap_019f1034-8702-7aa8-99a0-b3db700f4775.json  scenario_10_proxy_caller_019f101c-960b-7cc0-b727-c7dbd1cceb16.json
scenarios/: scenarios.json
scripts/: fetch_call_result.py  generate_bug_report.py  run_all_scenarios.py  run_call.py
src/: __init__.py  bug_report_generator.py  call_runner.py  config.py  phone_guard.py  recording_writer.py  scenario_loader.py  transcript_writer.py  vapi_client.py
tests/: test_config.py  test_dry_run.py  test_phone_guard.py  test_scenario_loader.py  test_vapi_payload.py
(+31 files in other folders)
