[project]
name = "vapi-patient-voice-bot"
version = "0.1.0"
description = "Scenario runner and evidence collector for Vapi patient voice bot challenge"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
